# DOPE_ROS

./: README.md
ws_personal/.catkin_tools/profiles/default/: devel_collisions.txt
ws_personal/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
ws_personal/devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
ws_personal/devel/.private/dope_node/: .catkin  .rosinstall  setup.sh
ws_personal/devel/.private/dope_skill_client/: .catkin  .rosinstall
ws_personal/devel/.private/dope_skill_msgs/: .catkin  .rosinstall  setup.sh
ws_personal/devel/.private/dope_skill_server/: .catkin  _setup_util.py  local_setup.sh  setup.sh
ws_personal/devel/.private/image_segmentation_skill_msgs/: .catkin  .rosinstall  setup.sh
ws_personal/devel/.private/image_segmentation_skill_server/: .catkin  .rosinstall  local_setup.sh
ws_personal/devel/include/dope_skill_msgs/: DopeSkillAction.h  DopeSkillActionFeedback.h  DopeSkillActionGoal.h  DopeSkillActionResult.h  DopeSkillFeedback.h  DopeSkillGoal.h  DopeSkillResult.h
ws_personal/devel/include/image_segmentation_skill_msgs/: ImageSegmentationSkillAction.h  ImageSegmentationSkillActionFeedback.h  ImageSegmentationSkillActionGoal.h  ImageSegmentationSkillActionResult.h  ImageSegmentationSkillFeedback.h  ImageSegmentationSkillGoal.h  ImageSegmentationSkillResult.h  MaskDefinition.h
ws_personal/devel/lib/dope_skill_server/: dope_skill.py
ws_personal/devel/lib/pkgconfig/: catkin_tools_prebuild.pc  dope_node.pc  dope_skill_client.pc  dope_skill_msgs.pc  dope_skill_server.pc  image_segmentation_skill_msgs.pc
ws_personal/devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  (+1 more)
ws_personal/logs/dope_skill_msgs/: build.cmake.000.log.stderr
ws_personal/logs/image_segmentation_skill_server/: build.cmake.000.log.stderr
ws_personal/src/dope_node/: CMakeLists.txt  package.xml  requirements.txt
ws_personal/src/dope_node/launch/: dope_node.launch  usb_cam.launch
ws_personal/src/dope_node/src/: inference.py
ws_personal/src/dope_skill/: dope_skill.yaml
ws_personal/src/dope_skill/dope_skill_client/: CMakeLists.txt  package.xml  setup.py
ws_personal/src/dope_skill/dope_skill_msgs/: CMakeLists.txt  package.xml
ws_personal/src/dope_skill/dope_skill_msgs/action/: DopeSkill.action
ws_personal/src/dope_skill/dope_skill_scxml/: dope_skill.scxml
ws_personal/src/dope_skill/dope_skill_server/: CMakeLists.txt
ws_personal/src/dope_skill/dope_skill_server/launch/: run.launch
ws_personal/src/dope_skill/dope_skill_server/scripts/: dope_skill.py
ws_personal/src/dope_skill/dope_skill_server/src/dope_skill_server/: dope_skill_class.py
ws_personal/src/dope_skill/dope_skill_server/test/: dope_skill_server_integration_tests.py  integration_test.test  test_dope_skill_class.py  unit_test.test
ws_personal/src/image_segmentation/: TODO.md  requirements.txt  requirements_pytorch_tensorflow
ws_personal/src/image_segmentation/image_segmentation_skill_msgs/: CMakeLists.txt
ws_personal/src/image_segmentation/image_segmentation_skill_msgs/msg/: MaskDefinition.msg
ws_personal/src/image_segmentation/image_segmentation_skill_server/: CMakeLists.txt  README.md  package.xml  setup.py
ws_personal/src/image_segmentation/image_segmentation_skill_server/docs/: configuration.md  heuristic.md  usage.md
ws_personal/src/image_segmentation/image_segmentation_skill_server/launch/: image_segmentation.launch  run_test_case.launch  rviz.launch
ws_personal/src/image_segmentation/image_segmentation_skill_server/scripts/: clahe_filter.py  cropbox_filter.py  image_segmentation_skill_base.py  image_segmentation_skill_filter_base.py  image_segmentation_skill_server.py  image_segmentation_skill_server_node.py  image_segmentation_weight_base.py  mask_rcnn_segmentation.py  pytorch_segmentation.py  score_selection.py
ws_personal/src/image_segmentation/image_segmentation_skill_server/scripts/mask_rcnn/: config.py  model.py  visualize.py
ws_personal/src/image_segmentation/image_segmentation_skill_server/scripts/yolov8/: inference.py
ws_personal/src/image_segmentation/image_segmentation_skill_server/scripts/yolov8/cfg/: default.yaml
ws_personal/src/image_segmentation/image_segmentation_skill_server/testcase/: config.yaml  estimation_pipeline.yaml  image_filters.yaml  neural_network.yaml
(+255 files in other folders)
